# fast-ai-notebooks

./: .gitignore  README.md  main.py  pyproject.toml  settings.ini
configs/: main-config.yaml
nbs/: index.ipynb  nbdev.yml
notebooks/: emotion-recognition-notebook.ipynb  emotion_recognition.py
